--- a/templates/base.html
+++ b/templates/base.html
@@ -22,11 +22,21 @@
   <!--
       Navbar & Banner
     -->
+    <nav>
+      <div class="container">
+        <div class="row">
+          <div class="col-12">
+            <a href="{% url 'index' %}">ACCUEIL</a>
+          </div>
+        </div>
+      </div>
+    </nav>
+
   <nav>
     <div class="container">
       <div class="row">
         <div class="col-12">
-          <a href="{% url 'index' %}">ACCUEIL</a>
+          <a href="{% url 'book_list' %}">Liste de livres</a>
         </div>
       </div>
     </div>
