--- a/templates/base.html
+++ b/templates/base.html
@@ -32,15 +32,35 @@
       </div>
     </nav>
 
-  <nav>
-    <div class="container">
-      <div class="row">
-        <div class="col-12">
-          <a href="{% url 'book_list' %}">Liste de livres</a>
+    <nav>
+      <div class="container">
+        <div class="row">
+          <div class="col-12">
+            <a href="{% url 'book_list' %}">Liste de livres</a>
+          </div>
         </div>
       </div>
-    </div>
-  </nav>
+    </nav>
+
+    <nav>
+      <div class="container">
+        <div class="row">
+          <div class="col-12">
+            <a href="{% url 'cat_list' %}">Liste des catégories</a>
+          </div>
+        </div>
+      </div>
+    </nav>
+
+    <nav>
+      <div class="container">
+        <div class="row">
+          <div class="col-12">
+            <a href="{% url 'author_list' %}">Liste des auteurs</a>
+          </div>
+        </div>
+      </div>
+    </nav>
 
   <main>
     <div class="container">
