--- a/templates/base.html
+++ b/templates/base.html
@@ -36,6 +36,16 @@
       <div class="container">
         <div class="row">
           <div class="col-12">
+            <a href="{% url 'about' %}">A PROPOS</a>
+          </div>
+        </div>
+      </div>
+    </nav>
+
+    <nav>
+      <div class="container">
+        <div class="row">
+          <div class="col-12">
             <a href="{% url 'book_list' %}">Liste de livres</a>
           </div>
         </div>
