--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,10 +1,10 @@
 {% extends 'base.html' %}
-{% block title %}Démo Django{% endblock %}
+{% block title %}BibliBoua{% endblock %}
 
 {% block content %}
 {% load static %}
 
-<h2>Démo Django</h2>
+<h2>BibliBoua</h2>
 
 <p>Mon premier site Django</p>
 
