--- a/templates/base.html
+++ b/templates/base.html
@@ -15,7 +15,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.2.3/css/bootstrap.min.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
 
-  <link rel="stylesheet" type="text/css" href="{% static 'css/demo.css' %}" />
+  <!-- <link rel="stylesheet" type="text/css" href="{% static 'css/demo.css' %}" /> -->
 </head>
 
 <body>
