--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -4,12 +4,41 @@
 {% block content %}
 {% load static %}
 
-<h2>BibliBoua</h2>
+<div class="container mt-5">
 
-<p>Mon premier site Django</p>
+  <div class="row justify-content-center mt-4">
+    <!-- Dracula -->
+    <div class="col-12 col-sm-6 col-md-4 col-lg-3 mb-4">
+      <div class="card h-100 shadow-sm">
+        <img src="{% static 'img/dracula.jpg' %}" class="card-img-top img-fluid" alt="Dracula">
+        <div class="card-body">
+          <h5 class="card-title">Dracula</h5>
+          <p class="card-text">Le classique de Bram Stoker, entre horreur et fascination.</p>
+        </div>
+      </div>
+    </div>
 
-<p>
-  <img class="img-thumbnail" src="{% static 'img/bib_boua.png' %}" alt="Python Django">
-</p>
+    <!-- L'Étranger -->
+    <div class="col-12 col-sm-6 col-md-4 col-lg-3 mb-4">
+      <div class="card h-100 shadow-sm">
+        <img src="{% static 'img/etranger.jpg' %}" class="card-img-top img-fluid" alt="L'Étranger">
+        <div class="card-body">
+          <h5 class="card-title">L'Étranger</h5>
+          <p class="card-text">L’absurde selon Camus, vu par les yeux de Meursault.</p>
+        </div>
+      </div>
+    </div>
 
+    <!-- Voyage au bout de la nuit -->
+    <div class="col-12 col-sm-6 col-md-4 col-lg-3 mb-4">
+      <div class="card h-100 shadow-sm">
+        <img src="{% static 'img/voyageNuit.jpg' %}" class="card-img-top img-fluid" alt="Voyage au bout de la nuit">
+        <div class="card-body">
+          <h5 class="card-title">Voyage au bout de la nuit</h5>
+          <p class="card-text">Une plongée dans la noirceur du monde selon Céline.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
 {% endblock %}
