Add form validation and UI improvements

--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -40,6 +40,10 @@
       <h5 class="fw-bold text-white">Découverte</h5>
       <p class="text-white-50">Explorez de nouveaux horizons littéraires facilement.</p>
     </div>
+
+    <div class="text-center mt-5">
+      <img src="{% static 'img/bib_boua.png' %}" alt="Bibliothèque" class="img-fluid rounded shadow-sm" style="max-width: 200px;">
+    </div>
   </div>
 
 </div>
