--- a/app/templates/app/author/author_list.html
+++ b/app/templates/app/author/author_list.html
@@ -7,25 +7,14 @@
 <div class="container my-5">
     <h2 class="mb-4 text-primary"><i class="fas fa-users me-2"></i>Liste des auteurs</h2>
 
-    {% if success_message %}
-        <div class="alert alert-success alert-dismissible fade show" role="alert">
-            <i class="fas fa-check-circle me-2"></i>{{ success_message }}
-            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-        </div>
-    {% endif %}
-    
-    {% if error_message %}
-        <div class="alert alert-danger alert-dismissible fade show" role="alert">
-            <i class="fas fa-exclamation-triangle me-2"></i>{{ error_message }}
-            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-        </div>
-    {% endif %}
 
+    {% if perms.app.add_author %}
     <div class="mb-4">
         <a href="{% url 'add_author' %}" class="btn btn-primary">
             <i class="fas fa-user-plus me-2"></i>Ajouter un auteur
         </a>
     </div>
+    {% endif %}
 
     <ul class="list-group">
         {% for author in authors %}
@@ -37,12 +26,19 @@
                 <a href="{% url 'author_details' author.id %}" class="btn btn-outline-info btn-sm">
                     <i class="fas fa-eye me-1"></i>Voir
                 </a>
+
+                {% if perms.app.change_author %}
                 <a href="{% url 'edit_author' author.id %}" class="btn btn-outline-warning btn-sm">
                     <i class="fas fa-edit me-1"></i>Modifier
                 </a>
+                {% endif %}
+                {% if perms.app.delete_author %}
                 <a href="{% url 'del_author' author.id %}" class="btn btn-outline-danger btn-sm">
                     <i class="fas fa-trash-alt me-1"></i>Supprimer
                 </a>
+                {% endif %}
+
+
             </div>
         </li>
         {% empty %}
