add paginator categories and authors

--- a/app/templates/app/category/cat_list.html
+++ b/app/templates/app/category/cat_list.html
@@ -16,7 +16,7 @@
     {% endif %}
 
     <ul class="list-group">
-        {% for category in categories %}
+        {% for category in page_categories %}
         <li class="list-group-item d-flex justify-content-between align-items-center">
             <div>
                 <strong>{{ category.name }}</strong>
@@ -42,6 +42,7 @@
         <li class="list-group-item text-muted">Aucune catégorie disponible.</li>
         {% endfor %}
     </ul>
+    {% include 'app/includes/pagination_section.html' with page_items=page_categories %}
 </div>
 
 {% endblock %}
