--- a/app/templates/app/author/author_list.html
+++ b/app/templates/app/author/author_list.html
@@ -17,7 +17,7 @@
     {% endif %}
 
     <ul class="list-group">
-        {% for author in authors %}
+        {% for author in page_authors %}
         <li class="list-group-item d-flex justify-content-between align-items-center">
             <div>
                 {{ author.first_name }} {{ author.last_name }}
@@ -45,6 +45,8 @@
         <li class="list-group-item text-muted">Aucun auteur disponible.</li>
         {% endfor %}
     </ul>
+    {% include 'app/includes/pagination_section.html' with page_items=page_authors %}
+
 </div>
 
 {% endblock %}
